--- a/src/ats-audit/index.njk
+++ b/src/ats-audit/index.njk
@@ -16,4 +16,4 @@ breadcrumbs:
     url: "/ats-audit/"
 ---
 {% set page = servicePages.atsAudit %}
-{% include "marketing-page.njk" %}
+{% include "service-page.njk" %}
