--- a/src/career-clarity/index.njk
+++ b/src/career-clarity/index.njk
@@ -16,4 +16,4 @@ breadcrumbs:
     url: "/career-clarity/"
 ---
 {% set page = servicePages.careerClarity %}
-{% include "marketing-page.njk" %}
+{% include "service-page.njk" %}
