--- a/src/cover-letter-writing/index.njk
+++ b/src/cover-letter-writing/index.njk
@@ -16,4 +16,4 @@ breadcrumbs:
     url: "/cover-letter-writing/"
 ---
 {% set page = servicePages.coverLetterWriting %}
-{% include "marketing-page.njk" %}
+{% include "service-page.njk" %}
