--- a/src/executive-coaching/index.njk
+++ b/src/executive-coaching/index.njk
@@ -16,4 +16,4 @@ breadcrumbs:
     url: "/executive-coaching/"
 ---
 {% set page = servicePages.executiveCoaching %}
-{% include "marketing-page.njk" %}
+{% include "service-page.njk" %}
