--- a/src/interview-prep/index.njk
+++ b/src/interview-prep/index.njk
@@ -16,4 +16,4 @@ breadcrumbs:
     url: "/interview-prep/"
 ---
 {% set page = servicePages.interviewPrep %}
-{% include "marketing-page.njk" %}
+{% include "service-page.njk" %}
