--- a/src/linkedin-optimization/index.njk
+++ b/src/linkedin-optimization/index.njk
@@ -16,4 +16,4 @@ breadcrumbs:
     url: "/linkedin-optimization/"
 ---
 {% set page = servicePages.linkedinOptimization %}
-{% include "marketing-page.njk" %}
+{% include "service-page.njk" %}
