--- a/src/mock-interviews/index.njk
+++ b/src/mock-interviews/index.njk
@@ -16,4 +16,4 @@ breadcrumbs:
     url: "/mock-interviews/"
 ---
 {% set page = servicePages.mockInterviews %}
-{% include "marketing-page.njk" %}
+{% include "service-page.njk" %}
