--- a/src/offer-strategy/index.njk
+++ b/src/offer-strategy/index.njk
@@ -16,4 +16,4 @@ breadcrumbs:
     url: "/offer-strategy/"
 ---
 {% set page = servicePages.offerStrategy %}
-{% include "marketing-page.njk" %}
+{% include "service-page.njk" %}
