--- a/src/resume-writing/index.njk
+++ b/src/resume-writing/index.njk
@@ -16,4 +16,4 @@ breadcrumbs:
     url: "/resume-writing/"
 ---
 {% set page = servicePages.resumeWriting %}
-{% include "marketing-page.njk" %}
+{% include "service-page.njk" %}
