--- a/src/salary-negotiation/index.njk
+++ b/src/salary-negotiation/index.njk
@@ -16,4 +16,4 @@ breadcrumbs:
     url: "/salary-negotiation/"
 ---
 {% set page = servicePages.salaryNegotiation %}
-{% include "marketing-page.njk" %}
+{% include "service-page.njk" %}
